# upload-download

./: Cargo.toml  README.md  install_ubuntu_service.sh  uninstall_ubuntu_service.sh
.github/workflows/: build.yml  release.yml
examples/: genpwd.rs
src/: handlers.rs  i18n.rs  main.rs  password.rs
static/: index.html
