[package]
name = "upload-download"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.8"
bytes = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
env_logger = "0.11"
log = "0.4"
