[package]
name = "upload-download"
version = "0.1.1"
edition = "2024"
authors = ["Rayyi-Tech"]

[dependencies]
actix-web = "4.14"
actix-multipart = "0.8"
bytes = "1.12"
futures-util = "0.3"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
chrono = "0.4"
tokio = { version = "1.53", features = ["full"] }
mime_guess = "2.0"
env_logger = "0.11"
log = "0.4"
